# popup-gpt

./: Cargo.toml
src/: chatgpt.rs  lib.rs  main.rs  misc.rs  model.rs
